--- a/frontend/components/Main/Main.css
+++ b/frontend/components/Main/Main.css
@@ -32,7 +32,6 @@
     background-size: cover;
 }
 .main-container .content-part{
-    /* width: 60%; */
     width: 100%;
     overflow-y: scroll;
     padding: 40px 115px 0 110px;
@@ -127,10 +126,59 @@
     line-height: 35px;
     font-size: 17px;
 }
+
+.main-container .content-part .after-query .main-content .ai-reply ul li{
+    margin-top: 35px;
+    margin-bottom: 35px;
+}
+.main-container .content-part .after-query .main-content .ai-reply ul li b{
+    color: rgb(255, 130, 130);
+    font-size: 23px;
+}
 .main-container .content-part .after-query .main-content .ai-reply b{
-    color: rgb(255, 114, 114);
+    color: rgb(255, 255, 255);
+    font-size: 19px;
+}
+.main-container .content-part .after-query .main-content .ai-reply .code-section-container{
+   height: auto;
+   background-color: rgb(0, 0, 0);
+   border-radius:10px ;
+   color: rgb(228, 152, 152);
+   display: flex;
+   flex-direction:column;
+   justify-content: space-between;
+   overflow-x: auto;
+   margin-bottom: 20px;
 }
 
+.main-container .content-part .after-query .main-content .ai-reply .code-section-container .icons{
+   color: rgb(199, 196, 196);
+   display: flex;
+   justify-content: space-between;
+   margin-bottom: 20px;
+   padding: 10px 20px;
+   background-color: rgb(28, 31, 31);
+}
+.main-container .content-part .after-query .main-content .ai-reply .code-section-container .code-icon{
+    color: rgb(255, 247, 11);
+}
+.main-container .content-part .after-query .main-content .ai-reply .code-section-container .copy-code-btn{
+   padding:0px 10px;
+   border-radius: 5px;
+   background-color: rgb(145, 143, 143);
+   font-size: 13px;
+   color: white;
+}
+.main-container .content-part .after-query .main-content .ai-reply .code-section-container .copy-code-btn:active {
+    transform: scale(0.96);
+}
+.main-container .content-part .after-query .main-content .ai-reply .code-section-container .copy-code-btn:hover{
+    background-color: gray;
+}
+.main-container .content-part .after-query .main-content .ai-reply .code-section-container .code-section{
+    padding: 20px 30px;
+    overflow-x:auto;
+}
 .main-container .content-part .before-query{
     height: 70vh;
     display: flex;
@@ -364,7 +412,7 @@
         margin: 0 0;
     }
     .main-container .bottom-part{
-       padding-bottom: 70px;
+       padding-bottom: 60px;
     }
 }
 
