--- a/frontend/components/Sidebar/Sidebar.css
+++ b/frontend/components/Sidebar/Sidebar.css
@@ -54,6 +54,47 @@
   margin-top: 27px;
   font-size: 17px;
 }
+.sidebar-container .part1 .recent-section .search-history .no-history{
+  font-size: 12px;
+  color: rgb(90, 87, 87);
+  margin-left: 5px;
+  margin-top: 5px;
+}
+.sidebar-container .part1 .recent-section .search-history .history-container{
+  height: 300px;
+  overflow-y: auto;
+  padding: 10px 0;
+  background-color: rgb(221,227,234);
+  border-radius: 10px;
+  margin-top: 5px;
+}
+  
+.sidebar-container .part1 .recent-section .search-history .history-container .history{
+  font-size: 14px;
+  padding: 2px 10px;
+  margin-bottom: 10px;
+  color: rgb(58, 58, 58);
+}
+.sidebar-container .part1 .recent-section .search-history .history-container .history:hover{
+  background-color: rgb(208, 214, 220);
+}
+::-webkit-scrollbar{
+  width: 10px;
+}
+::-webkit-scrollbar-track {
+  background: #f1f1f1;
+  border-radius: 10px;
+}
+
+::-webkit-scrollbar-thumb {
+  background-color: #888;
+  border-radius: 10px; 
+  border: 2px solid #f1f1f1;
+}
+
+::-webkit-scrollbar-thumb:hover {
+  background-color: #555;
+}
 
 .sidebar-container .part2{
   margin-bottom: 40px;
